feat: Support for workspace.fileOperations.*
Fixes #194

Signed-off-by: azerr <azerr@redhat.com>